samples/_failures_safe/1761626513_b81979_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_982d2472.c: In function ‘main’:
./samples/SAFE/__tmp_982d2472.c:165:9: error: ‘f’ undeclared (first use in this function)
  165 |     if (f
      |         ^
./samples/SAFE/__tmp_982d2472.c:165:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_982d2472.c:165:10: error: expected ‘)’ at end of input
  165 |     if (f
      |        ~ ^
      |          )
./samples/SAFE/__tmp_982d2472.c:165:5: error: expected declaration or statement at end of input
  165 |     if (f
      |     ^~
